--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -1,7 +1,8 @@
 {
   "welcome": "Didim'de Benefi Café'ye hoş geldiniz",
   "enjoy": "Kahve, Çay ve ev yapımı pastalarımızı güzel atmosferimizde keyifle tadın!",
-  "opening": "Her gün bizi 8 - 23 saatleri arasında ziyaret edin",
+  "opening": "Açılış Saatleri",
+  "times": ["Pazartesi - Cumartesi 8 - 24", "Pazar 10 - 24"],
   "location": "Kent Meydanı karşısı",
   "imprint": "İletişim Bilgileri",
   "name": "Benefi Cafe",
